2004-09-xx  Rudolf Lippan <rlippan@remotelinux.com> (2.9005_1)

	* Added '$dbh->{mysql_unsafe_bind_type_guessing}'. When this flag is
	  enabled any scalar that is passed to execute() and was used in
	  numeric context will be treated as a number when being sent to the
	  database backend. This can be a secuity problem in that if you 
	  use a string in numeric context, it will NOT be quoted before being 
	  passed to the database -- use at your own risk. The default is off.
	* fixed typo in pod chaning  failed_auto_reconnects_failed to 
	  auto_reconnects_failed [Paul DuBois <paul@snake.net>]

2004-07-13  Rudolf Lippan <rlippan@remotelinux.com> (2.9004)
        * myld now exits with the return value of ld rather than always exiting
          with a value of when when myld returned something other than 0.
        * Table names that had '?'s in them and were quoted using '`' would thow
          off placeholder counting.
        * Add support for mysq 4.1.3's api change to shutdown 
          [Patrick Galbraith]
        * Fixed to error messages in t/50commit.t 
          [Decker, Gero <gero.decker@sap.com>]
        * Fix to documentation of mysql_local_info.  enabling 
          mysql_local_infile is ineffective if LOCAL is disabled in the server
          and not effective as docs had read. [Paul DuBois <paul@snake.net>]

2003-10-26  Rudy Lippan  <rlippan@remotelinux.com> (2.9003)
	* Applied patch from Aaron and Chuck that added basic testing of the 
	  table_info/column_info functions [Aaron Ross <aross@plusthree.com>]
	* Applied patch removing Jochen Wiedmann's contanct information and 
	  also removing the restriction on CD ROM distribution. 
	  [Jochen Wiedmen <joe@ispsoft.de>]
	* The check for the innodb table type was broken so the transaction
	  tests were skipped even though the database supported transactions.
	* :sql_types were not being inported in column info, so SQL_VARCAR was
	  thowing an error. Also, the :sql_types were not being pulled into 