@@ -190,6 +190,7 @@ struct imp_sth_st {
 #define do_error		mysql_dr_error
 #define dbd_db_type_info_all    mysql_db_type_info_all
 #define dbd_db_quote            mysql_db_quote
+#define dbd_db_last_insert_id   mysql_db_last_insert_id
 
 #include <dbd_xsh.h>
 void	 do_error (SV* h, int rc, const char *what);
@@ -205,3 +206,7 @@ extern MYSQL* mysql_dr_connect(MYSQL*, char*, char*, char*, char*, char*,
 
 
 extern int mysql_db_reconnect(SV*);
+
+SV *mysql_db_last_insert_id(SV* dbh, imp_dbh_t *imp_dbh,
+        SV *catalog, SV *schema, SV *table, SV *field,SV *attr);
+
