@@ -1,5 +1,11 @@
 2004-09-xx  Rudolf Lippan <rlippan@remotelinux.com> (2.9005_1)
 
+	* Applied patch to fix column info with later version of mysql
+	  [Tim Bunce]
+	* Merged $dbh->last_inert_id() from the 3.0 dev tree
+	* If you are using perl 5.008 without a $ENV{LANG} of "C". Makefile.PL
+	  will now 1. Complain loudly, and 2. set LANG to "C" and then
+	  exec itself with the new lang setting.
 	* Added '$dbh->{mysql_unsafe_bind_type_guessing}'. When this flag is
 	  enabled any scalar that is passed to execute() and was used in
 	  numeric context will be treated as a number when being sent to the
